--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
+    "@angular/animations": "^10.0.9",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
     "@angular/forms": "~10.0.5",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angular-material": "^1.2.0",
+    "bootstrap": "^4.5.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
